@@ -284,3 +284,5 @@ Entity中toVo区别是否忽略大小写
 10、增加Charset对象支持
 11、增加DFA模块，用于关键词查找
 12、Conver.toBool支持更多类型的字符串形式
+13、JSON修复构造方法
+14、Setting增加getStr方法，分组默认值
